<resources>

    <string name="navigation_drawer_open" translatable="false">close drawer</string>
    <string name="navigation_drawer_close" translatable="false">open drawer</string>
    <string name="title_activity_main" translatable="false">Main</string>
    <string name="menu_settings">设置</string>
    <string name="about">关于</string>
    <string name="load_fail">网络被外星人劫持，稍后再试试看？</string>
    <string name="share_title" translatable="false">shared_title</string>
    <string name="shared_img" translatable="false">shared_img</string>
    <string name="activity_settings">设置</string>
    <string name="app">应用</string>
    <string name="action_share">分享</string>
    <string name="activity_detail">详情页</string>
    <string name="loading">努力加载中…</string>
    <string name="my_email" translatable="false">danteandroi@gmail.com</string>
    <string name="contact_me">联系我</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_current_cache">将清理所有图片缓存。当前缓存为</string>
    <string name="set_check_version">检查更新</string>
    <string name="set_feedback">应用反馈</string>
    <string name="set_post_feedback">提建议或反馈bug</string>
    <string name="share_to">分享到</string>
    <string name="menu_share">分享</string>
    <string name="version">版本</string>
    <string name="about_me">作者</string>
    <string name="about_me_description">我是个热爱Google的android开发者，现在上海，如果有好的Job可以推荐给我~</string>
    <string name="feedback_description">如果你有好的idea或建议，不要犹豫，告诉我吧~</string>
    <string name="license">免责声明</string>
    <string name="license_description">
        本APP仅供学习交流使用，资源全部来源于网络，如有侵权请联系数据来源网站，包括http://www.dbmeinv.com, http://www.apic.in/
    </string>
    <string name="column_not_available">栏目未完成，请更新或联系作者 :D</string>
    <string name="clear_cache_success">缓存已清理</string>
    <string name="clear_cache_failed">缓存删除失败</string>
    <string name="original_splash">启动图</string>
    <string name="set_original_splash">随机使用已缓存的图片或使用自带启动图</string>
    <string name="share_app_description">这个软件很不错，图片适合做壁纸 https://www.coolapk.com/apk/com.dante.girl
    </string>
    <string name="share_app">分享应用</string>
    <string name="tips">贴士</string>
    <string name="tips_content">浏览到下方时，点击标题栏可以快速返回顶部</string>
    <string name="gank" translatable="false">Gank</string>
    <string name="nav_secret_mode" translatable="false">XXOO</string>
    <string name="secret_mode_opened">隐藏模式已打开，我们一起嘿嘿嘿~</string>
    <string name="secret_mode_closed">隐藏模式已关闭。</string>
    <string name="close_app">关闭应用</string>
    <string name="h_beauty">唯美</string>
    <string name="h_selfie">自拍</string>
    <string name="h_exposure">露出</string>
    <string name="h_original">原创</string>
    <string name="can_not_find_version_name">无法识别版本号</string>
    <string name="load_no_result">啊哦，妹子太害羞，不好意思出來了</string>
    <string name="try_again">再来一次</string>
    <string name="save_img_failed">无法保存图片</string>
    <string name="save_img_success">妹子传送成功~</string>
    <string name="view_img_hint">长按图片可以保存到手机~</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="save_img">保存</string>
    <string name="leave_app">真的要离开人家了吗？</string>
    <string name="email_not_install">Email客户端未安装。</string>
    <string name="hottest">热门</string>
    <string name="browse_picture_hint">浏览图片时，您可以长按以呼出菜单</string>
    <string name="hint">提示</string>
    <string name="ok" translatable="false">OK</string>
    <string name="empty">空</string>
    <string name="clear_finished">清理完成</string>
    <string name="deep_clean">深度清理</string>
    <string name="app_info">应用信息</string>
    <string name="app_name">五次元妹子</string>
    <string name="nav_a_zone">二次元图区</string>
    <string name="nav_beauty">Gank 妹子</string>
    <string name="favorite">我的收藏</string>
    <string name="images_empty">啊哦，没有内容，赶快去收藏吧~</string>
    <string name="set_like_download">收藏时保存图片</string>
    <string name="empty_content">啥也没有</string>
    <string name="thanks_for_donation">成为VIP后可以开启更多福利图区（8元）\n\n为什么要捐赠？\n- 服务器运行需要成本\n-
        开发app耗费开发者的时间和精力\n-
        您的捐赠会让app变得更好用
    </string>
    <string name="transition_morph_view" translatable="false">morph_view_transition</string>
    <string name="donate">捐贈</string>
    <string name="theme_color">主题颜色</string>
    <string name="theme_choose">选择你喜欢的各式各样颜色吧~</string>
    <string name="update_message">更新内容:\n\n %s</string>
    <string name="downloading">可劲下载中…</string>
    <string name="new_version">发现新版本</string>
    <string name="install_hint">当前是debug版本，由于正式版签名不同更新会失败。卸载重装即可</string>
    <string name="alipay_not_found">您没有安装支付宝，请添加作者微信赞助: lightear</string>
    <string name="wechat" translatable="false">lightear</string>
    <string name="update">立即更新</string>
    <string name="net_error">失败次数过多，可能是您的网络运营商限制，无法访问此数据源。(如移动4G)</string>
    <string name="net_error_detail">了解详情</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="set_wallpaper_failed">设置壁纸失败</string>
    <string name="is_loading">正在加载，先喝杯茶吧~</string>
    <string name="dont_hint">不再提示</string>
    <string name="retry">不信邪</string>
    <string name="picture_load_fail">图片被封印了，无法加载</string>
    <string name="deviceid">设备标识</string>
    <string name="copy">点击复制后，转账时备注设备标识，捐赠完毕等待一段时间即可开启隐藏模式</string>
    <string name="permission_statement">拒绝电话权限将无法获取设备标识以开启隐藏图区（需要捐赠）</string>
    <string name="device_id_copied">设备标识已复制，请转账8元，在备注粘贴标识，捐赠完毕请耐心等待~</string>
    <string name="go_market">去市场</string>
    <string name="thanks_for_feedback">感谢您的反馈</string>
    <string name="you_are_vip">恭喜，您已经是VIP用户，再次感谢支持！</string>
    <string name="head_view_hint">干嘛戳人家屁股啦</string>
    <string name="nav_mz">妹子图站</string>
    <string name="device_id_uncopied">设备标识为空，请检查是否允许了电话权限</string>
    <string name="regularly_clear">定期清理</string>
    <string name="regularly_clear_summary">每隔三天清理一次图片缓存</string>
    <string name="no_picture_maybe_need_login">无法解析图片，可能因为需要登录</string>
    <string name="hide">隐藏图区</string>
    <string name="type_hide_hint">大量隐藏图区捐赠后可见</string>
    <string name="cache_strategy">缓存策略</string>
    <string name="cache_strategy_summary">是否使用缓存以及何时清理缓存</string>
    <string name="got_it">知道了</string>
    <string name="erciyuan_home">二次元图区作为主页</string>

</resources>
